lab05/02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user00-eventlistener
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: user00-eventlistener.159.122.179.241.nip.io
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: webhook-eventsource-svc
                port:
                  number: 12000
